[gd_scene load_steps=3 format=1]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://ERROR.png" type="Texture" id=2]

[node name="Menu" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = -2.0
margin/right = 1919.0
margin/bottom = 1078.0
script/script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 527.0
margin/top = 395.0
margin/right = 797.0
margin/bottom = 432.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 511.0
margin/top = 306.0
margin/right = 828.0
margin/bottom = 368.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter The Password to see the Results"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="START" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 700.0
margin/top = 512.0
margin/right = 953.0
margin/bottom = 634.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="WindowDialog" type="WindowDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 357.0
margin/top = 180.0
margin/right = 1122.0
margin/bottom = 678.0
popup/exclusive = false
window/title = "Results"

[node name="ok" type="Button" parent="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 129.0
margin/top = 395.0
margin/right = 287.0
margin/bottom = 448.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="exit" type="Button" parent="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 503.0
margin/top = 395.0
margin/right = 655.0
margin/bottom = 448.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT"
flat = false

[node name="School Captain" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 231.0
margin/top = 4.0
margin/right = 533.0
margin/bottom = 38.0
text = "School Captain"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="House Vice Captain" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 231.0
margin/top = 204.0
margin/right = 533.0
margin/bottom = 238.0
text = "House Vice Captain"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="House Captain" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 231.0
margin/top = 104.0
margin/right = 533.0
margin/bottom = 138.0
text = "House Captain"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Candidate1_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 24.0
margin/right = 420.0
margin/bottom = 59.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HVCandidate1_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 232.0
margin/right = 420.0
margin/bottom = 267.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HCandidate1_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 128.0
margin/right = 420.0
margin/bottom = 163.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Candidate2_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 60.0
margin/right = 420.0
margin/bottom = 95.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HVCandidate2_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 278.0
margin/right = 420.0
margin/bottom = 313.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HCandidate2_name" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 219.0
margin/top = 169.0
margin/right = 420.0
margin/bottom = 204.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Candidate1_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 24.0
margin/right = 619.0
margin/bottom = 59.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HVCandidate1_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 232.0
margin/right = 619.0
margin/bottom = 267.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HCandidate1_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 128.0
margin/right = 619.0
margin/bottom = 163.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Candidate2_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 60.0
margin/right = 619.0
margin/bottom = 95.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HVCandidate2_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 278.0
margin/right = 619.0
margin/bottom = 313.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HCandidate2_score" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 169.0
margin/right = 619.0
margin/bottom = 204.0
text = ":"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Key" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 625.0
margin/top = 264.0
margin/right = 734.0
margin/bottom = 283.0
text = "Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="WindowDialog/Key"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -26.0
margin/top = 20.0
margin/right = 81.0
margin/bottom = 39.0
text = "1 :  Junior Voter"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="WindowDialog/Key"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -38.0
margin/top = 37.0
margin/right = 76.0
margin/bottom = 56.0
text = "1.5 :  Senior Voter"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="WindowDialog/Key"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -26.0
margin/top = 54.0
margin/right = 88.0
margin/bottom = 73.0
text = "2 :  Teacher"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="WindowDialog/Key"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -26.0
margin/top = 70.0
margin/right = 88.0
margin/bottom = 89.0
text = "5 :  Principal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Number" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 576.0
margin/top = 15.0
margin/right = 689.0
margin/bottom = 29.0
text = "Number of Voters"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VOTERS" type="Label" parent="WindowDialog/Number"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 51.0
margin/top = 23.0
margin/right = 91.0
margin/bottom = 37.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EXIT" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 372.0
margin/top = 512.0
margin/right = 625.0
margin/bottom = 634.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="ERROR" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 3.0
margin/right = 1440.0
margin/bottom = 903.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="exit" type="Button" parent="ERROR"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 48.0
margin/right = 122.0
margin/bottom = 72.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT"
flat = true


